tests/errors/udefined_var_or_func.wren
// Test program for built-in functions
import "ifj25" for Ifj

class Program {
    static main() { 
      var ok
      {
          var ok
      }
      
      ok = exists()
      Ifj.write(ok)
      Ifj.write("\n")

      //ok = exists(5)
      //ok = notExists()
      //notOk = exists()
        
    }

    static exists() {
      return 1
    }

    static exists() {
      return 1
    }
}
